--- a/front/src/componentes/Reserva/formReserva.css
+++ b/front/src/componentes/Reserva/formReserva.css
@@ -3,7 +3,7 @@
     text-align: center;
     background-color: rgba(248, 237, 223, 0.452);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    padding: 1%;
+    padding: 31px;
     box-shadow: 0px 12px 30px 2px rgba(0,0,0,3.3);
     align-items: center;
     justify-content: center;
@@ -21,7 +21,7 @@ input, select {
     justify-content: center;
     text-align: center;
     align-items: center; 
-    height: 5%;
+    height: 7%;
 }
 
 input {
@@ -71,8 +71,8 @@ label{
     white-space: nowrap;
     will-change: box-shadow,transform;
     font-size: 18px;
-    margin: 5%
-    ;
+    margin: 5%;
+    width: 200px
 }
 
 .button-30:focus {
@@ -88,3 +88,26 @@ label{
     box-shadow: #D6D6E7 0 3px 7px inset;
     transform: translateY(2px);
 }
+
+@media screen and (max-width:900px){
+    .reservaFecha{
+        height: 150px;
+        display: flex;
+        align-items: center;}
+    label{
+        position: relative;
+        align-items: center;}
+    .button-30{
+        margin: 2%;
+        width: 200px;
+
+    }
+    
+}
+
+@media screen and (max-width:700px){
+        .reservaFecha{height:1%}
+        .formNav{flex-direction: column;}
+};
+
+
